[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/game_screen/game_screen.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/game_screen/events.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game_screen/level_info_pane.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game_screen/messaging_pane.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="GameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainWindow" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameView" type="Control" parent="MainWindow"]
margin_right = 478.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="ViewportContainer" type="ViewportContainer" parent="MainWindow/GameView"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="MainWindow/GameView/ViewportContainer"]
size = Vector2( 478, 540 )
handle_input_locally = false
render_target_update_mode = 0

[node name="HUD" type="VBoxContainer" parent="MainWindow/GameView"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Margin" type="MarginContainer" parent="MainWindow/GameView/HUD"]
margin_right = 278.0
margin_bottom = 36.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="Buttons" type="HBoxContainer" parent="MainWindow/GameView/HUD/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 278.0
margin_bottom = 36.0
custom_constants/separation = 10

[node name="Button" type="Button" parent="MainWindow/GameView/HUD/Margin/Buttons"]
margin_right = 40.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "play"

[node name="Button2" type="Button" parent="MainWindow/GameView/HUD/Margin/Buttons"]
margin_left = 50.0
margin_right = 102.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "pause"

[node name="Button3" type="Button" parent="MainWindow/GameView/HUD/Margin/Buttons"]
margin_left = 112.0
margin_right = 153.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "stop"

[node name="SpeedButton" type="Button" parent="MainWindow/GameView/HUD/Margin/Buttons"]
margin_left = 163.0
margin_right = 268.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "speed: normal"

[node name="EventsMargin" type="MarginContainer" parent="MainWindow/GameView/HUD"]
margin_top = 40.0
margin_right = 278.0
margin_bottom = 50.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="Events" parent="MainWindow/GameView/HUD/EventsMargin" instance=ExtResource( 3 )]
margin_right = 10.0
margin_bottom = 10.0

[node name="EditorPane" type="HBoxContainer" parent="MainWindow"]
margin_left = 482.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="Left" type="VBoxContainer" parent="MainWindow/EditorPane"]
margin_right = 374.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="LevelInfoPane" parent="MainWindow/EditorPane/Left" instance=ExtResource( 4 )]
margin_bottom = 228.0

[node name="ScrollContainer" type="ScrollContainer" parent="MainWindow/EditorPane/Left"]
margin_top = 232.0
margin_right = 374.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainWindow/EditorPane/Left/ScrollContainer"]
margin_right = 200.0
margin_bottom = 50.0

[node name="Button" type="Button" parent="MainWindow/EditorPane/Left/ScrollContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "this is a sample block here ..."

[node name="BlockDock" type="ScrollContainer" parent="MainWindow/EditorPane"]
margin_left = 378.0
margin_right = 478.0
margin_bottom = 540.0
rect_min_size = Vector2( 100, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainWindow/EditorPane/BlockDock"]
margin_right = 86.0
margin_bottom = 80.0
custom_constants/separation = 20

[node name="Button" type="Button" parent="MainWindow/EditorPane/BlockDock/VBoxContainer"]
margin_right = 86.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
text = "some block"

[node name="MessingPane" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="MainWindow/GameView/HUD/Margin/Buttons/SpeedButton" to="." method="_on_speed_button_pressed"]
